# TerminalGame

./: .gitignore  CMakeLists.txt
include/: Sprite.hpp  TerminalColor.hpp  TerminalGame.hpp  TextRenderer.hpp
src/: Sprite.cpp  TerminalColor.cpp  TerminalGame.cpp  TextRenderer.cpp
tests/: example.cpp  test.cpp
